--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,24 @@ platform = atmelavr
 board = uno
 framework = arduino
 lib_deps = dfrobot/DFRobotDFPlayerMini@^1.0.5
+
+[env:attiny85]
+platform = atmelavr
+framework = arduino
+board = attiny85
+upload_protocol = custom
+upload_port = /dev/ttyACM0
+upload_speed = 19200
+upload_flags = 
+	-C
+	$PROJECT_PACKAGES_DIR/tool-avrdude/avrdude.conf
+	-p
+	$BOARD_MCU
+	-P
+	$UPLOAD_PORT
+	-b
+	$UPLOAD_SPEED
+	-c
+	stk500v1
+upload_command = avrdude $UPLOAD_FLAGS -U flash:w:$SOURCE:i
+lib_deps = dfrobot/DFRobotDFPlayerMini@^1.0.5
